# cyril

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile
addons/ofxBeat/ofxBeatExample/src/: testApp.h
addons/ofxBeat/src/: fft.cpp  ofxBeat.cpp
addons/ofxEditor/ofxEditorExample/src/: testApp.h
addons/ofxEditor/src/: ClipBoard.cpp  EditorBuffer.cpp  EditorBuffer.h  ofxEditor.cpp  ofxEditor.h
addons/ofxPostProcessing/: CMakeLists.txt
addons/ofxPostProcessing/example/src/: ofApp.h
addons/ofxPostProcessing/src/: BleachBypassPass.cpp  BleachBypassPass.h  BloomPass.cpp  BloomPass.h  ContrastPass.cpp  ContrastPass.h  ConvolutionPass.cpp  ConvolutionPass.h  DofAltPass.cpp  DofAltPass.h  DofPass.cpp  DofPass.h  EdgePass.h  FakeSSSPass.cpp  FakeSSSPass.h  FxaaPass.cpp  FxaaPass.h  GodRaysPass.cpp  GodRaysPass.h  HorizontalTiltShifPass.h  HsbShiftPass.cpp  HsbShiftPass.h  KaleidoscopePass.cpp  KaleidoscopePass.h  LUTPass.cpp  LUTPass.h  LimbDarkeningPass.cpp  LimbDarkeningPass.h  NoiseWarpPass.cpp  NoiseWarpPass.h  PixelatePass.cpp  PixelatePass.h  PostProcessing.cpp  PostProcessing.h  RGBShiftPass.cpp  RGBShiftPass.h  RenderPass.cpp  RenderPass.h  RimHighlightingPass.h  SSAOPass.cpp  (+6 more)
cmake/: FindFreeImage.cmake
src/: cyrilApp.cpp  cyrilApp.h  main.cpp
src/Cyril/: Cyril.cpp  Cyril.h  CyrilBloom.cpp  CyrilBloom.h  CyrilOp.cpp  CyrilOp.h  CyrilParser.cpp  CyrilParser.h  CyrilPixelate.cpp  CyrilPixelate.h  CyrilState.cpp  CyrilState.h  cyril.lpp  cyril.ypp
src/Cyril/Funs/: CyrilCosFun.cpp  CyrilCosFun.h  CyrilFftFun.cpp  CyrilFftFun.h  CyrilFun.cpp  CyrilFun.h  CyrilHsbFun.cpp  CyrilHsbFun.h  CyrilLerpFun.cpp  CyrilLerpFun.h  CyrilMapFun.cpp  CyrilMapFun.h  CyrilNoiseFun.cpp  CyrilNoiseFun.h  CyrilPaletteFun.cpp  CyrilPaletteFun.h  CyrilRandFun.cpp  CyrilRandFun.h  CyrilSinFun.cpp  CyrilSinFun.h  CyrilTanFun.cpp  CyrilTanFun.h  CyrilWaveFun.cpp  CyrilWaveFun.h
src/Cyril/Lang/: CyrilAssign.cpp  CyrilAssign.h  CyrilColorLoad.cpp  CyrilColorLoad.h  CyrilDebugOp.cpp  CyrilDebugOp.h  CyrilDo.cpp  CyrilDo.h  CyrilFor.cpp  CyrilFor.h  CyrilHexColor.cpp  CyrilHexColor.h  CyrilIf.cpp  CyrilIf.h  CyrilList.cpp  CyrilList.h  CyrilLoad.cpp  CyrilLoad.h  CyrilNamedColor.cpp  CyrilNamedColor.h  CyrilPush.cpp  CyrilPush.h  CyrilUnaryOp.cpp  CyrilUnaryOp.h  CyrilWhile.cpp  CyrilWhile.h
src/Cyril/Ops/: CyrilAnimStep.cpp  CyrilAnimStep.h  CyrilAnimation.cpp  CyrilAnimation.h  CyrilBackgroundOp.cpp  CyrilBackgroundOp.h  CyrilBallDetailOp.cpp  CyrilBallDetailOp.h  CyrilBallOp.cpp  CyrilBallOp.h  CyrilBinaryOp.cpp  CyrilBinaryOp.h  CyrilBlink.cpp  CyrilBlink.h  CyrilBoxOp.cpp  CyrilBoxOp.h  CyrilColorOp.cpp  CyrilColorOp.h  CyrilConeOp.cpp  CyrilConeOp.h  CyrilDie.cpp  CyrilDie.h  CyrilFillOp.cpp  CyrilFillOp.h  CyrilGridOp.cpp  CyrilGridOp.h  CyrilImgOp.cpp  CyrilImgOp.h  CyrilInitOp.cpp  CyrilInitOp.h  CyrilKaleidoscope.cpp  CyrilKaleidoscope.h  CyrilLightOp.cpp  CyrilLightOp.h  CyrilLineOp.cpp  CyrilLineOp.h  CyrilMoveOp.cpp  CyrilMoveOp.h  CyrilNoFillOp.cpp  CyrilNoFillOp.h  (+30 more)
src/Engine/: Palette.cpp  Palette.h  Particle.cpp  Particle.h
